test/expected/declare_o_less_eq_greater_2rck_a-c++17.out
struct S; declare <=> as operator (reference to const S, reference to const ...
         ^
10: error: overloading operator "<=>" is not supported until C++20
